# Aurora-tauri

./: README.md  config.json  config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  LAUNCHERSERVER.md  RUNNING.md
frontend/: App.tsx  index.html  types.d.ts  utils.ts
frontend/runtime/components/: Layout.tsx
frontend/runtime/components/ServerButton/: index.tsx
frontend/runtime/components/TitleBar/: index.tsx  states.ts
frontend/runtime/scenes/Login/: index.tsx
frontend/runtime/scenes/Settings/: index.tsx
src/: App.tsx  index.tsx  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  discord.rs  game.rs  grpc.rs  lib.rs  matcher.rs  ping.rs  updater.rs
src/runtime/components/ServerButton/: index.tsx
src/runtime/components/TitleBar/: index.tsx  states.ts
src/runtime/hooks/: pingServer.ts  selectServer.ts
src/runtime/scenes/Login/: index.tsx
src/runtime/scenes/ServerPanel/: index.tsx
src/runtime/scenes/ServersList/: index.tsx
src/runtime/scenes/Settings/: index.tsx
